--- a/style.css
+++ b/style.css
@@ -17,15 +17,15 @@ h3 {
 }
 
 h1 {
-  font-size: 96px !important;
+  font-size: 96px;
 }
 
 h2 {
-  font-size: 48px !important;
+  font-size: 48px;
 }
 
 h3 {
-  font-size: 24px !important;
+  font-size: 24px;
   opacity: 0.7;
 }
 
